--- a/diplomka.tex
+++ b/diplomka.tex
@@ -406,9 +406,18 @@ Události používání kláves se používá nejčastěji ve spojení s mouse-t
 Některé webové stránky kladou velký důraz na přístupnost a umožňují uživateli se navigovat pomocí klávesových zkratek. V takovém případě by měli měřit i používání těchto zkratek a případně je upravit tak, aby byla navigace na jejich webu co nejjednodušší.
 
 
+\subsubsection{Skrolování stránky}
+
+Událost skrolování stránky nastává když uživatel posouvá stránku nahoru a dolů, případně doprava nebo doleva. Podle  posuvu stránky v určitých intervalech se dá usuzovat, že uživatel stránky čte, nebo pouze prohlíží. Podle délky čtení a toho, jestli se uživatel dostal až na konec článku se dá určit, jestli článek dočetl.
+
+V kombinací s velikostí vnítřní části okna prohlížeče se dá přesně uričit, na kterou část stránky se uživatel dívá. Toho se například využívá k vykreslení heatmapy, která kolik času uživatelé věnují jednotlivým částem stránky. 
+
 
 \subsubsection{Odchod ze stránky}
-\subsubsection{Skrolování stránky}
+
+
+
+
 \subsubsection{Změna velikosti okna}
 
 \subsection{Informace získané pomocí JavaScriptu}
